<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="victorlopez.estudio.casa.com.ruletacasino.Main2Activity"
    android:background="@drawable/fondo2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinero"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:textColor="#f0e700" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_weight="0.90"
                android:indeterminate="false"
                android:progress="1"
                android:max="1000"
                android:splitTrack="false"
                android:thumbTint="#ff7e00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/numDinero"
                android:textStyle="bold"
                android:textColor="#f0e700" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Apuesta"
                android:id="@+id/textView2"
                android:textColor="#f0e700"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/apuesta">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rojo"
                    android:id="@+id/radioButton"
                    android:checked="true"
                    android:layout_marginLeft="30dp"
                    android:buttonTint="#ff0010"
                    android:textStyle="bold"
                    android:textColor="#ff0000" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negro"
                    android:id="@+id/radioButton2"
                    android:checked="false"
                    android:layout_marginLeft="30dp"
                    android:textColor="#010101"
                    android:textStyle="bold"
                    android:buttonTint="#010101" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor0"
                    android:id="@+id/radioButton3"
                    android:checked="false"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:textColor="#06d12e"
                    android:buttonTint="#06d12e" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cantidad"
                android:id="@+id/textView3"
                android:textColor="#f0e700"
                android:textStyle="bold" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar2"
                android:layout_weight="0.90"
                android:progress="1"
                android:indeterminate="false"
                android:thumbTint="#ff7e00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:id="@+id/numCantidad"
                android:textStyle="bold"
                android:textColor="#f0e700" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jugar"
                android:id="@+id/jugar"
                android:layout_marginLeft="75dp"
                android:background="#8fa1ff"
                android:textStyle="bold"
                android:textColor="#0049cb" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                android:id="@+id/salir"
                android:textStyle="bold"
                android:textColor="#800090"
                android:background="#e075fb"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="85dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ganador"
                android:id="@+id/apuestaGanadora"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:visibility="invisible"
                android:textColor="#42ed52" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
